--- a/vignettes/quadratic_model_equation.Rmd
+++ b/vignettes/quadratic_model_equation.Rmd
@@ -11,7 +11,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This documentation explains how the quadratic model equation used to fit
+This document explains how the quadratic model equation used to fit
 binding data from a FRET experiment is derived from the law of mass action.
 
 ## Binding equilibrium
