--- a/vignettes/setting_up_fret_experiment.Rmd
+++ b/vignettes/setting_up_fret_experiment.Rmd
@@ -13,7 +13,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This documentation explains how to set up a FRET titration experiment with
+This document explains how to set up a FRET titration experiment with
 appropriate controls to get data readily usable by `rfret`.
 
 # Material
